crates/rargs/tests/snapshots/test_scripts__impl-207.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] extensible.sh download SOURCE"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Download

args:
- rargs_input = ([0] = "SOURCE")
- rargs_source = SOURCE

