crates/rargs/tests/snapshots/test_scripts__impl-211.snap
---
source: crates/rargs/tests/test_scripts.rs
description: stdin.sh
expression: dst
---
#!/usr/bin/env bash
# This script was generated by rargs 0.0.0 (https://rargs.cloudbridge.uy)
# Modifying it manually is not recommended

if [[ "${BASH_VERSINFO:-0}" -lt 4 ]]; then
  printf "bash version 4 or higher is required\n" >&2
  exit 1
fi

if [[ -n "${DEBUG:-}" ]]; then
  set -x
fi
set -e


normalize_input() {
  local arg flags

  while [[ $# -gt 0 ]]; do
    arg="$1"
    if [[ $arg =~ ^(--[a-zA-Z0-9_\-]+)=(.+)$ ]]; then
      input+=("${BASH_REMATCH[1]}")
      input+=("${BASH_REMATCH[2]}")
    elif [[ $arg =~ ^(-[a-zA-Z0-9])=(.+)$ ]]; then
      input+=("${BASH_REMATCH[1]}")
      input+=("${BASH_REMATCH[2]}")
    elif [[ $arg =~ ^-([a-zA-Z0-9][a-zA-Z0-9]+)$ ]]; then
      flags="${BASH_REMATCH[1]}"
      for ((i = 0; i < ${#flags}; i++)); do
        input+=("-${flags:i:1}")
      done
    else
      input+=("$arg")
    fi

    shift
  done
}

inspect_args() {
  prefix="rargs_"
  args="$(set | grep ^$prefix || true)"
  if [[ -n "$args" ]]; then
    echo
    echo args:
    for var in $args; do
      echo "- $var" | sed 's/=/ = /g'
    done
  fi

  if ((${#deps[@]})); then
    readarray -t sorted_keys < <(printf '%s\n' "${!deps[@]}" | sort)
    echo
    echo deps:
    for k in "${sorted_keys[@]}"; do echo "- \${deps[$k]} = ${deps[$k]}"; done
  fi

  if ((${#other_args[@]})); then
    echo
    echo other_args:
    echo "- \${other_args[*]} = ${other_args[*]}"
    for i in "${!other_args[@]}"; do
      echo "- \${other_args[$i]} = ${other_args[$i]}"
    done
  fi
}

version() {
  echo "0.0.1"
}
usage() {
  printf "STDIN Example\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  stdin [OPTIONS] [COMMAND] [COMMAND_OPTIONS]\n"
  printf "  stdin -h|--help\n"
  printf "  stdin -v|--version\n"
  printf "\n\033[4m%s\033[0m\n" "Commands:"
  cat <<EOF
  arg ....... Read from stdin or from a file using an argument
  option .... Read from stdin or from a file using an option
EOF

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -h --help\n"
  printf "    Print help\n"
  printf "  -v --version\n"
  printf "    Print version\n"
}

parse_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -v|--version)
        version
        exit
        ;;
      -h|--help)
        usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done
  action="${1:-}"

  case $action in
    arg)
      action="arg"
      input=("${input[@]:1}")
      ;;
    option)
      action="option"
      input=("${input[@]:1}")
      ;;
    -h|--help)
      usage
      exit
      ;;
    "")
      ;;
    *)
      printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid command: " "$action" >&2
      exit 1
      ;;
  esac
}
arg_usage() {
  printf "Read from stdin or from a file using an argument\n"

  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  arg [OPTIONS] [PATH]\n"
  printf "  arg -h|--help\n"
  printf "\n\033[4m%s\033[0m\n" "Arguments:"
  printf "  PATH\n"
  printf "    Path to file (reads from stdin if empty)\n"
  printf "    [@default -]\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -h --help\n"
  printf "    Print help\n"
}
parse_arg_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        arg_usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done

  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -?*)
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid option: " "$key" >&2
        exit 1
        ;;
      *)
        if [[ -z "$rargs_path" ]]; then
          rargs_path=$key
          shift
        else
          printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid argument: " "$key" >&2
          exit 1
        fi
        ;;
    esac
  done
}
# Read from stdin or from a file using an argument
arg() {
  # Parse command arguments
  parse_arg_arguments "$@"

  
    
  if [[ -z "$rargs_path" ]]; then
    rargs_path="-"
  fi
    
  inspect_args
  # Since cat knows how to handle "-" as a value, it will work with boht a file path and "-".
  cat "${args["path"]}"
}
option_usage() {
  printf "Read from stdin or from a file using an option\n"

  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  option [OPTIONS]\n"
  printf "  option -h|--help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -p --path [<PATH>]\n"
  printf "    Path to file (reads from stdin if empty)\n"
  printf "    [@default -]\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}
parse_option_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        option_usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done

  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -p | --path)
        rargs_path="$2"
        shift 2
        ;;
      -?*)
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid option: " "$key" >&2
        exit 1
        ;;
      *)
        if [[ "$key" == "" ]]; then
          break
        fi
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid argument: " "$key" >&2
        exit 1
        ;;
    esac
  done
}
# Read from stdin or from a file using an option
option() {
  # Parse command arguments
  parse_option_arguments "$@"

  
    
  if [[ -z "$rargs_path" ]]; then
    rargs_path="-"
  fi
    
  inspect_args
  # Since cat knows how to handle "-" as a value, it will work with boht a file path and "-".
  cat "${args["path"]}"
}

run() {
  declare -A deps=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  # Call the right command action
  case "$action" in
    "arg")
      arg "${input[@]}"
      exit
      ;;
    "option")
      option "${input[@]}"
      exit
      ;;
    "")
      printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing command. Select one of " "arg, option" >&2
      usage >&2
      exit 1
      ;;
    
  esac
}

run "$@"

