crates/rargs/tests/snapshots/test_scripts__impl-212.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] stdin.sh -h"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
STDIN Example

[4mUsage:[0m
  stdin [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  stdin -h|--help
  stdin -v|--version

[4mCommands:[0m
  arg ....... Read from stdin or from a file using an argument
  option .... Read from stdin or from a file using an option

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Pring version

